--- a/GeraAlerta/organizaDados/organizaTemperatura2.rmd
+++ b/GeraAlerta/organizaDados/organizaTemperatura2.rmd
@@ -5,7 +5,8 @@ todas as APS
 
 ```{r include=FALSE}
 #library("lubridate")
-source("../fun/data2SE.r")
+#source("../fun/data2SE.r")
+#source("../fun/callmongoclima.r")
 ```
 
 Abre dados OpenWeather (autor: Oswaldo): 
