callmongoclima atualizado para nova versao do mongor

--- a/GeraAlerta/geraAlerta/geraAlerta.rmd
+++ b/GeraAlerta/geraAlerta/geraAlerta.rmd
@@ -67,7 +67,7 @@ par(mfrow=c(1,1),mar=c(4,4,1,1))
 plot(cidade$tweets,type="l",ylab="tweets",axes=FALSE,xlab="",main="Tweets sobre dengue")
 axis(2)
 le=dim(cidade)[1]
-axis(1,at=rev(seq(le,1,by=-12)),labels=d$SE[rev(seq(le,1,by=-12))],las=2)
+axis(1,at=rev(seq(le,1,by=-12)),labels=cidade$SE[rev(seq(le,1,by=-12))],las=2)
 ```
 
 
@@ -76,7 +76,7 @@ plot(cidade$casos, type="l", xlab="",ylab="casos notificados no MRJ",axes=FALSE,
 #lines(cidade$casos_corrigidos, col=2)
 #legend((len-12),max(cidade$casos_corrigidos[(len-22):(len)],na.rm=TRUE),c("digitado","notificado estimado"),lty=1,col=1:2)
 axis(2)
-axis(1,at=rev(seq(le,1,by=-12)),labels=d$SE[rev(seq(le,1,by=-12))],las=2)
+axis(1,at=rev(seq(le,1,by=-12)),labels=cidade$SE[rev(seq(le,1,by=-12))],las=2)
 ```
 
 ```{r echo=FALSE}
@@ -84,7 +84,7 @@ par(mfrow=c(1,1),mar=c(4,4,1,1))
 plot(cidade$tempmin,type="l",ylab="temperatura",axes=FALSE,xlab="",main="Temperatura mínima")
 axis(2)
 le=dim(cidade)[1]
-axis(1,at=rev(seq(le,1,by=-12)),labels=d$SE[rev(seq(le,1,by=-12))],las=2)
+axis(1,at=rev(seq(le,1,by=-12)),labels=cidade$SE[rev(seq(le,1,by=-12))],las=2)
 ```
 
 
