--- a/GeraAlerta/geraAlerta/relatorio.rmd
+++ b/GeraAlerta/geraAlerta/relatorio.rmd
@@ -1,64 +1,327 @@
-Gera Relatorio
-========================================================
-Ainda em fase preliminar
+---
+title: "Alerta Dengue Rio"
+author: "Relatório de situação"
+output: html_document
+---
+
+===========================================================
+### <a name="voltaini"></a>
+
 
 ```{r echo=FALSE}
-aRJ <- paste("../",aRJ,sep="")
-alertaRJ <- read.csv(aRJ)
-aAP <- paste("../",aAP,sep="")
-alertaAP <- read.csv(aAP)
+hoje <- Sys.Date()
+SEhoje <- data2SE(hoje,file="../tabelas/SE.csv",format="%Y-%m-%d")
+```
+
+**Rio de Janeiro, `r as.character(hoje)`  (SE `r as.character(SEhoje)`)**
+
+```{r echo=FALSE}
+# Abre os dados mais recentes
+d2 <- read.csv(file="../alerta/alertaAPS_201447.csv")
+```
+
+
+* [Na cidade](#tab1)
+
+* [Por APS](#tab2)
+
+
+<br> </br>
+
+### <a name="tab1"></a> Situação na cidade do Rio de Janeiro
+
+```{r echo=FALSE}
+# serie temporal de casos agregados na cidade
+casos <- aggregate(d2[,"casos"],by=list(SE=d2$SE),FUN=sum) # casos brutos
+casosm <- aggregate(d2[,"casosm"],by=list(SE=d2$SE),FUN=sum) # casos corrigidos
+cidade<- merge(casos,casosm,by="SE")
+names(cidade)<-c("SE","casos","casos_corrigidos")
+dt<-subset(d2,APS=="AP1")[,c("SE","tweets")]  #tweets
+dc <- aggregate(d2[,"tempmin"],by=list(SE=d2$SE),FUN=mean,na.rm=TRUE) #clima
+names(dc)[2]<-"tempmin"
+cidade<- merge(cidade,dt,by="SE")
+cidade<- merge(cidade,dc,by="SE")
+```
+
+
+```{r echo=FALSE}
+cidade <- subset(cidade,SE>=201101)
+par(mfrow=c(3,1),mar=c(4,4,1,1))
+plot(cidade$tweets,type="l",ylab="tweets",axes=FALSE,xlab="",main="Tweets sobre dengue")
+axis(2)
+le=dim(cidade)[1]
+#axis(1,at=rev(seq(le,1,by=-12)),labels=cidade$SE[rev(seq(le,1,by=-12))],las=2)
+
+plot(cidade$casos, type="l", xlab="",ylab="casos notificados no MRJ",axes=FALSE,main="casos de dengue")
+#lines(cidade$casos_corrigidos, col=2)
+#legend((len-12),max(cidade$casos_corrigidos[(len-22):(len)],na.rm=TRUE),c("digitado","notificado estimado"),lty=1,col=1:2)
+axis(2)
+#axis(1,at=rev(seq(le,1,by=-12)),labels=cidade$SE[rev(seq(le,1,by=-12))],las=2)
+
+plot(cidade$tempmin,type="l",ylab="temperatura",axes=FALSE,xlab="",main="Temperatura mínima")
+axis(2)
+le=dim(cidade)[1]
+axis(1,at=rev(seq(le,1,by=-12)),labels=cidade$SE[rev(seq(le,1,by=-12))],las=2)
 
 ```
 
-Alerta MRJ
-----------
+<br> </br>
+
+Últimas 12 semanas:
+
 ```{r echo=FALSE}
-tail(alertaRJ)
+library(pander)
+panderOptions('table.split.table', Inf)
+pander(tail(cidade,n=12),compact=TRUE,)
+
 ```
 
-```{r echo=FALSE}
-par(mfrow=c(4,1),mar=c(0,0,0,0))
-plot(alertaRJ$casos,type='l',axes=F)
-text(10,0.9*max(alertaRJ$casos),"Temp>24",cex=1.4)
-abline(v=which(alertaRJ$alertaTemp==1),col=655,lwd=1.2)
-plot(alertaRJ$casos,type='l',axes=F)
-text(10,0.9*max(alertaRJ$casos),"Rt>1",cex=1.4)
-abline(v=which(alertaRJ$alertaRt1==1),col="orange",lwd=1.2)
-plot(alertaRJ$casos,type='l',axes=F)
-abline(v=which(alertaRJ$alertaCasos==1),col="red",lwd=1.2)
-text(20,0.9*max(alertaRJ$casos),"casos>media+2sd",cex=1.4)
-plot(alertaRJ$tweets,type='l',axes=F)
-text(10,0.9*max(alertaRJ$tweets),"tweets",cex=1.4)
-```
+Legenda:
 
-APS
------------
+- SE: semana epidemiológica
+- casos: nímero de casos de dengue no SINAN
+- casos_corrigidos: estimativa do número de casos notificados (ver [Notas](#notas))
+- tweets: número de tweets relatando sintomas de dengue (ver [Notas](#notas))
+- tempmin: média das temperaturas mínimas da semana
+
+[volta para o início](#voltaini)
+
+<br> </br>
+<br> </br>
+
+### <a name="volta"></a>
+
+### <a name="tab2"></a> Alerta por APS
+
+Código:
+
+*Verde (atividade baixa)*
+   temperatura < 22 graus por 3 semanas 
+   atividade de tweet normal (não aumentada)
+   ausência de transmissão sustentada
+
+*Amarelo (Alerta)*
+   temperatura > 22C por mais de 3 semanas
+   ou atividade de tweet aumentada
+
+*Laranja (Transmissão sustentada)*
+  número reprodutivo >1 por 3 semanas
+
+*Vermelho (atividade alta)*
+ incidência > 100:100.000
+
+
+**Selecione a APS desejada**
+
+* [APS 1](#ap1)
+* [APS 2.1](#ap21)
+* [APS 2.2](#ap22)
+* [APS 3.1](#ap31)
+* [APS 3.2](#ap32)
+* [APS 3.3](#ap33)
+* [APS 4](#ap4)
+* [APS 5.1](#ap51)
+* [APS 5.2](#ap52)
+* [APS 5.3](#ap53)
+
+
+
+### <a name="ap1"></a> Alerta APS 1
 
 ```{r echo=FALSE}
-listaAP <- unique(alertaAP$APS)
-plot.alerta<-function(ap){
-      par(mfrow=c(4,1),mar=c(0,0,0,0))
-      plot(alertaAP$casos[alertaAP$APS==ap],type='l',axes=F)
-      text(10,0.9*max(alertaAP$casos[alertaAP$APS==ap]),"Temp>24",cex=1.4)
-      text(80,0.9*max(alertaAP$casos[alertaAP$APS==ap]),labels=as.character(ap),cex=1.4)
-      abline(v=which(alertaAP$alertaTemp[alertaAP$APS==ap]==1),col=655,lwd=1.2)
-      plot(alertaAP$casos[alertaAP$APS==ap],type='l',axes=F)
-      text(10,0.9*max(alertaAP$casos[alertaAP$APS==ap]),"Rt>1",cex=1.4)
-      abline(v=which(alertaAP$alertaRt1[alertaAP$APS==ap]==1),col="orange",lwd=1.2)
-      plot(alertaAP$casos[alertaAP$APS==ap],type='l',axes=F)
-      abline(v=which(alertaAP$alertaCasos[alertaAP$APS==ap]==1),col="red",lwd=1.2)
-      text(20,0.9*max(alertaAP$casos[alertaAP$APS==ap]),"casos>media+2sd",cex=1.4)
-      plot(alertaAP$tweets[alertaAP$APS==ap],type='l',axes=F)
-      text(10,0.9*max(alertaAP$tweets[alertaAP$APS==ap]),"tweets",cex=1.4)
+plot.alerta2<-function(ap){
+      par(mai=c(0,0,0,0),mar=c(4,1,1,1))
+      d2v <- subset(d2,APS==ap)[52:le,]
+      les = dim(d2v)[1]
+      plot(1:les,d2v$casos,type="l",axes=FALSE,ylab="",xlab="")
+      abline(v=which(d2v$cor==1),col="darkgreen",lwd=2)
+      abline(v=which(d2v$cor==2),col="yellow",lwd=2)
+      abline(v=which(d2v$cor==3),col="orange",lwd=2)
+      abline(v=which(d2v$cor==4),col="red",lwd=2)
+      title(as.character(ap),cex=1.4)
+      axis(2)
+      axis(1,at=rev(seq(les,1,by=-16)),labels=d2v$SE[rev(seq(les,1,by=-16))],las=2,cex=0.3)
+      lines(1:les,d2v$casos,lwd=2)
 }
-```
 
+```
 
 ```{r echo=FALSE}
-for(i in 1:10) {
-      print(as.character(listaAP[i]))
-      print(tail(alertaAP[alertaAP$APS==listaAP[i],]))
-      plot.alerta(listaAP[i])
-}
+panderOptions('table.split.table', Inf)
+
+par(mfrow=c(1,1))
+plot.alerta2("AP1")
+tab<-tail(d2[d2$APS=="AP1",c("SE","tempmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=8)
 ```
 
+<br> </br>
+
+Histórico da 1
+```{r echo=FALSE}
+pander(tab)
+```
+
+[volta](#volta)
+
+### <a name="ap21"></a> Alerta APS 2.1
+
+```{r echo=FALSE}
+ap = "AP2.1"
+plot.alerta2(ap)
+tab<-tail(d2[d2$APS==ap,c("SE","tempmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=8)
+```
+
+<br> </br>
+
+Histórico da `r ap`
+```{r echo=FALSE}
+pander(tab)
+```
+
+[volta](#volta)
+
+### <a name="ap22"></a> Alerta APS 2.2
+
+```{r echo=FALSE}
+ap = "AP2.2"
+plot.alerta2(ap)
+tab<-tail(d2[d2$APS==ap,c("SE","tempmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=8)
+```
+
+<br> </br>
+
+Histórico da `r ap`
+```{r echo=FALSE}
+pander(tab)
+```
+[volta](#volta)
+
+### <a name="ap31"></a> Alerta APS 3.1
+
+```{r echo=FALSE}
+ap = "AP3.1"
+plot.alerta2(ap)
+tab<-tail(d2[d2$APS==ap,c("SE","tempmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=8)
+```
+
+<br> </br>
+
+Histórico da `r ap`
+```{r echo=FALSE}
+pander(tab)
+```
+[volta](#volta)
+
+### <a name="ap32"></a> Alerta APS 3.2
+
+```{r echo=FALSE}
+ap = "AP3.2"
+plot.alerta2(ap)
+tab<-tail(d2[d2$APS==ap,c("SE","tempmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=8)
+```
+
+<br> </br>
+
+Histórico da `r ap`
+```{r echo=FALSE}
+pander(tab)
+```
+[volta](#volta)
+
+### <a name="ap33"></a> Alerta APS 3.3
+
+```{r echo=FALSE}
+ap = "AP3.3"
+plot.alerta2(ap)
+tab<-tail(d2[d2$APS==ap,c("SE","tempmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=8)
+```
+
+<br> </br>
+
+Histórico da `r ap`
+```{r echo=FALSE}
+pander(tab)
+```
+[volta](#volta)
+
+### <a name="ap4"></a> Alerta APS 4
+
+```{r echo=FALSE}
+ap = "AP4"
+plot.alerta2(ap)
+tab<-tail(d2[d2$APS==ap,c("SE","tempmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=8)
+```
+
+<br> </br>
+
+Histórico da `r ap`
+```{r echo=FALSE}
+pander(tab)
+```
+[volta](#volta)
+
+### <a name="ap51"></a> Alerta APS 5.1
+
+```{r echo=FALSE}
+ap = "AP5.1"
+plot.alerta2(ap)
+tab<-tail(d2[d2$APS==ap,c("SE","tempmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=8)
+```
+
+<br> </br>
+
+Histórico da `r ap`
+```{r echo=FALSE}
+pander(tab)
+```
+[volta](#volta)
+
+### <a name="ap52"></a> Alerta APS 5.2
+
+```{r echo=FALSE}
+ap = "AP5.2"
+plot.alerta2(ap)
+tab<-tail(d2[d2$APS==ap,c("SE","tempmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=8)
+```
+
+<br> </br>
+
+Histórico da `r ap`
+```{r echo=FALSE}
+pander(tab)
+```
+[volta](#volta)
+
+### <a name="ap53"></a> Alerta APS 5.3
+
+```{r echo=FALSE}
+ap = "AP5.3"
+plot.alerta2(ap)
+tab<-tail(d2[d2$APS==ap,c("SE","tempmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=8)
+```
+
+<br> </br>
+
+Histórico da `r ap`
+```{r echo=FALSE}
+pander(tab)
+```
+[volta](#volta)
+
+
+
+### <a name="notas"></a> Notas
+
+
+- Os dados do sinan mais recentes ainda não foram totalmente digitados. Estimamos o número esperado de casos
+notificados considerando o tempo ate os casos serem digitados.
+- Os dados de tweets são gerados pelo Observatório de Dengue (UFMG). Os tweets são processados para exclusão de informes e outros temas relacionados a dengue
+- Algumas vezes, os casos da última semana ainda não estao disponiveis, nesse caso, usa-se uma estimação com base na tendência de variação da serie 
+
+Créditos
+------
+Esse e um projeto desenvolvido em parceria pela Fiocruz, FGV e Prefeitura do Rio de Janeiro, com apoio da SVS/MS
+
+Mais detalhes, ver: www.dengue.mat.br
+
+[volta para o início](#voltaini)
